--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
+.patrick-hand-regular {
+    font-family: "Patrick Hand", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+
 body{
 background-color: #AC1FFE;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-family: "Patrick Hand", cursive;
 margin: 0;
 padding: 0;
 display: flex;
